crates/semantics/src/operation_import_resolver/tests/snapshots/nitrogql_semantics__operation_import_resolver__tests__error_import_fragment_nonexistent.snap
---
source: crates/semantics/src/operation_import_resolver/tests/mod.rs
expression: err
---
ExtensionError {
    message: FragmentNotFound {
        name: "Frag999",
        file: "./frag1.graphql",
        position: Pos {
            line: 1,
            column: 16,
            file: 0,
            builtin: false,
        },
    },
}
