crates/semantics/src/operation_import_resolver/tests/snapshots/nitrogql_semantics__operation_import_resolver__tests__error_import_nonexistent.snap
---
source: crates/semantics/src/operation_import_resolver/tests/mod.rs
expression: err
---
ExtensionError {
    message: FileNotFound {
        file: "./nonexistent.graphql",
        position: Pos {
            line: 1,
            column: 27,
            file: 0,
            builtin: false,
        },
    },
}
