crates/semantics/src/operation_import_resolver/tests/snapshots/nitrogql_semantics__operation_import_resolver__tests__specific_import.snap
---
source: crates/semantics/src/operation_import_resolver/tests/mod.rs
expression: print_document(&resolved)
---
query Foo {
  foo {
    ... Frag1
  }
}
fragment Frag1 on Foo {
  bar
}

